--- a/grafico.Rmd
+++ b/grafico.Rmd
@@ -28,7 +28,7 @@ covid <- subset(datacovid, location %in% paises)
 # Vector de colores
 colores <- c("Spain" = "black", "Italy" = "red", "France" = "blue", "United States" = "green", "Germany" = "purple", "Canada" = "orange", "Japan" = "grey", "India" = "brown")
 
-tamano <- c("Spain" = 1.5, "Italy" = 0.7, "France" = 0.7, "United States" = 0.7, "Germany" = 0.7, "Canada" = 0.7, "Japan" = 0.7, "India" = 0.7)
+tamano <- c("Spain" = 0.7, "Italy" = 0.3, "France" = 0.3, "United States" = 0.3, "Germany" = 0.3, "Canada" = 0.3, "Japan" = 0.3, "India" = 0.3)
 
 
 
@@ -36,8 +36,7 @@ gr1 <- ggplot(covid, aes(x = date, y = new_deaths_smoothed_per_million, col= loc
   geom_line(aes(size = location)) + 
   scale_size_manual(values = tamano) +
   scale_color_manual(values = colores) +
-  labs(title = "Número de muertes diarias por millón de habitantes",
-       subtitle = "Datos de COVID-19 hasta la fecha actual",
+  labs(title = "Muertes por COVID-19 hasta la fecha actual",
        x = "Fecha",
        y = "Muertes diarias por millón de habitantes",
        col = "País",
@@ -47,7 +46,9 @@ gr1 <- ggplot(covid, aes(x = date, y = new_deaths_smoothed_per_million, col= loc
         legend.title = element_text(size = 12, face = "bold"),
         legend.margin = margin(5, 5, 5, 5)) +
   guides(col = guide_legend(override.aes = list(size = 1.5))) + 
-  scale_x_date(date_labels = "%b %d, %Y")
+  scale_x_date(date_labels = "%b %d, %Y") +
+  theme(panel.grid.major.y = element_line("grey",size = 0.1,linetype = 2))
+  
 
 
 gr1_interactivo <- ggplotly(gr1)
